Lincheck 2.30 [stressLinchk]